<resources>
    <string name="app_name">Mi Apparcamiento</string>
    <string name="correo">Correo:</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="nombre">Nombre:</string>
    <string name="registrarse">Registrarse</string>
    <string name="marca">Marca:</string>
    <string name="modelo">Modelo:</string>
    <string name="longitud_del_coche">Longitud del coche (en metros):</string>
    <string name="mensaje_longitud">Vamos a buscar espacios de acuerdo a la longitud de tu coche</string>
    <string name="guardar">Guardar</string>
    <string name="registra_tu_tarjeta">Registra tu tarjeta</string>
    <string name="nombre_completo">Nombre completo:</string>
    <string name="mes">MM</string>
    <string name="año">YY</string>
    <string name="cvv">CVV</string>
    <string name="realizar_pago">Realizar pago</string>
    <string name="info_membresia">Información de membresía:</string>
    <string name="info_auto">Información de auto:</string>
    <string name="mi_membresia">Mi membresía</string>
    <string name="ir">IR</string>
    <string name="busca_aqu">Busca aquí</string>
    <string name="usuario_premium">USUARIO PREMIUM</string>
    <string name="mi_auto">Mi auto</string>
    <string name="cerrar_sesión">Cerrar sesión</string>
    <string name="cambiar_membresia">Cambiar membresía</string>
    <string name="cancelar_membresia">cancelar membresía</string>
    <string name="editar_informacion">Editar información</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="membresias">Membresías</string>
    <string name="registra_tu_auto">Registra tu Auto</string>
    <string name="mi_Auto">Mi Auto</string>
    <string name="mi_membres_a">Mi Membresía</string>
</resources>