<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mapFragment">
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.miapparcamiento.ui.MapFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_mapFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_mapFragment_to_membershipFragment"
            app:destination="@id/membershipFragment" />
        <action
            android:id="@+id/action_mapFragment_to_registerVehicleFragment"
            app:destination="@id/registerVehicleFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.miapparcamiento.ui.ProfileFragment"
        android:label="@string/mi_perfil"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_yourMemberShipFragment"
            app:destination="@id/yourMemberShipFragment" />
        <action
            android:id="@+id/action_profileFragment_to_myCarFragment"
            app:destination="@id/myCarFragment" />
    </fragment>
    <fragment
        android:id="@+id/membershipFragment"
        android:name="com.example.miapparcamiento.ui.MembershipFragment"
        android:label="@string/membresias"
        tools:layout="@layout/fragment_membership" />
    <fragment
        android:id="@+id/registerVehicleFragment"
        android:name="com.example.miapparcamiento.ui.RegisterVehicleFragment"
        android:label="@string/registra_tu_auto"
        tools:layout="@layout/fragment_register_vehicle" />
    <fragment
        android:id="@+id/myCarFragment"
        android:name="com.example.miapparcamiento.ui.MyCarFragment"
        android:label="@string/mi_Auto"
        tools:layout="@layout/fragment_my_car">
        <action
            android:id="@+id/action_myCarFragment_to_registerVehicleFragment"
            app:destination="@id/registerVehicleFragment" />
    </fragment>
    <fragment
        android:id="@+id/yourMemberShipFragment"
        android:name="com.example.miapparcamiento.ui.YourMemberShipFragment"
        android:label="@string/mi_membres_a"
        tools:layout="@layout/fragment_your_membership">
        <action
            android:id="@+id/action_yourMemberShipFragment_to_membershipFragment"
            app:destination="@id/membershipFragment" />
    </fragment>
</navigation>