<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterVehicleFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/marca_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/marca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:maxLength="50"
            android:minHeight="48dp"
            android:inputType="textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/modelo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/modelo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/marca_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/modelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:minHeight="48dp"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="-2dp"
            tools:layout_editor_absoluteY="96dp"
            android:inputType="textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/longitud_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitud_del_coche"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/modelo_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/longitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:minHeight="48dp"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="-2dp"
            tools:layout_editor_absoluteY="96dp"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/mensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_longitud"
        app:layout_constraintTop_toBottomOf="@+id/longitud_layout"
        android:layout_marginTop="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mensaje" />

</androidx.constraintlayout.widget.ConstraintLayout>