<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usuario_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        style="@style/edittextstyle"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:maxLength="50"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contraseña_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrase_a"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/usuario_layout"
        style="@style/edittextstyle"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp">

        <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/visitorNamesEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="50"
        android:minHeight="48dp"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="96dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseña_layout"
        android:text="@string/aceptar"/>

<!-- TODO:Falta icono de carro -->

</androidx.constraintlayout.widget.ConstraintLayout>