<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.YourMemberShipFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <TextView
        android:id="@+id/info_membership"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_membresia"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
 />

    <TextView
        android:id="@+id/membresia_contratada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Plan contratado"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/info_membership"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/ahorro_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Ahorro total"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/membresia_contratada"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/duracion_de_membresia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Duración de membresía"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/ahorro_total"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/cambiar_membresia"
        style="@style/buttonborderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cambiar_membresia"
        app:layout_constraintStart_toEndOf="@+id/pencil_membresia"
        app:layout_constraintTop_toBottomOf="@+id/duracion_de_membresia" />

    <Button
        android:id="@+id/cancelar_membresia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar_membresia"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/pencil_membresia"
        style="@style/icon_style"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/outline_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/cambiar_membresia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cambiar_membresia"
        android:padding="8dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>